Paper link added in DESCRIPTION & few other changes

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,13 +2,17 @@ Package: MPGE
 Type: Package
 Title: A Two-Step Approach to Testing Overall Effect of Gene-Environment Interaction for Multiple Phenotypes
 Version: 1.0.0
+Date: 2020-10-14
 Authors@R: c(person("Arunabha", "Majumdar", email = "statgen.arunabha@gmail.com", role = c("aut", "cre")), person("Tanushree", "Haldar", email = "tanushree.haldar@gmail.com", role = "aut"))
-Description: Interaction between a genetic variant (e.g., a SNP) and an environmental variable (e.g., physical activity) can have a shared effect on multiple phenotypes (e.g., LDL and HDL). MPGE is a two-step method to test for an overall interaction effect on multiple phenotypes. In first step, the method tests for an overall marginal genetic association between the genetic variant and the multivariate phenotype. In the second step, SNPs which show an evidence of marginal overall genetic effect in the first step are prioritized while testing for an overall GxE effect.
+Description: Interaction between a genetic variant (e.g., a single nucleotide polymorphism) and an environmental variable (e.g., physical activity) can have a shared effect on multiple phenotypes (e.g., blood lipids). We implement a two-step method to test for an overall interaction effect on multiple phenotypes. In first step, the method tests for an overall marginal genetic association between the genetic variant and the multivariate phenotype. The genetic variants which show an evidence of marginal overall genetic effect in the first step are prioritized while testing for an overall gene-environment interaction effect in the second step. Methodology is available from: A Majumdar, KS Burch, S Sankararaman, B Pasaniuc, WJ Gauderman, JS Witte (2020) <doi:10.1101/2020.07.06.190256>.
 Depends: R (>= 3.5.0)
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
+URL: https://github.com/ArunabhaCodes/MPGE
+BugReports: https://github.com/ArunabhaCodes/MPGE/issues
 RoxygenNote: 6.1.1
+Roxygen: list(markdown = TRUE)
 Suggests: 
     knitr,
     rmarkdown,
@@ -17,4 +21,5 @@ VignetteBuilder: knitr
 Imports: 
     car,
     purrr,
-    stats
+    stats,
+    utils
